# nRF9160-barebone-fota

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
src/: main.c
src/downloader/: downloader.c  downloader.h
src/fota/: fota.c  fota.h  fota_tlv.c  fota_tlv.h
src/lte/: connection_info.c  connection_info.h  lte.c  lte.h
